# sisi-tv

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  install.bat  kanban-to.md  odm-replacement-prd_1.md  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat  stop.bat  uninstall.bat
.playwright-mcp/: page-2026-05-17T09-52-30-578Z.yml
design/01.dashboard/: code.html
design/02.live-matrix/: code.html
design/03.event/: code.html
design/04.system-settings/: DESIGN.md  code.html
design/05. Camera-feed-designs/: code.html
docs/plans/: 2026-05-16-ui-wireup-design.md  2026-05-16-ui-wireup.md  2026-05-17-web-pivot.md
process/: activity-log.md
scripts/: create-startup-shortcut.ps1  create-viewer-startup-shortcut.ps1  vendor_static.py
src/ngc_cams/: __init__.py  __main__.py  app.py  cameras.py  config.py  db.py  discovery_runner.py  models.py  segments.py  settings_store.py  vlc_logging.py
src/ngc_cams/onvif/: __init__.py  discovery.py  ptz.py  streams.py
src/ngc_cams/recording/: __init__.py  ffmpeg.py  locator.py  manager.py  paths.py  retention.py
src/ngc_cams/ui/: __init__.py  camera_dialog.py  camera_form.py  cameras_tab.py  discovered_tab.py  discovery_worker.py  main_window.py  viewer_panel.py
src/ngc_cams_viewer/: __init__.py  __main__.py
src/ngc_cams_web/: __main__.py  composition.py  hls.py  live.py
src/ngc_cams_web/routes/: cameras.py  discovery.py  events.py  live.py  ptz.py  recordings.py  settings.py  snapshots.py
src/ngc_cams_web/static/fonts/: material-symbols.css
src/ngc_cams_web/templates/: _discovered.html  _feed_filter_overlays.html  base.html  camera_detail.html  camera_edit.html  events.html  grid.html  index.html  recording_detail.html  settings.html
tests/: test_camera_form.py  test_config.py  test_db.py  test_db_locking.py  test_discovery.py  test_discovery_runner.py  test_ffmpeg.py  test_ptz.py  test_recording_locator.py  test_recording_manager.py  test_recording_paths.py  test_recording_retention.py  test_segments.py  test_settings_store.py  test_vlc_logging.py  test_web_cameras.py  test_web_composition.py  test_web_discovery.py  test_web_hls.py  test_web_live.py  test_web_live_route.py  test_web_package.py  test_web_ptz.py  test_web_recordings.py  test_web_settings.py  test_web_snapshots.py
