[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sisi-tv"
version = "0.1.0"
description = "SISI-TV — personal ONVIF camera manager with RTSP live view and recording."
requires-python = ">=3.11"
dependencies = [
    "onvif-zeep>=0.2.12",
    "wsdiscovery>=2.1.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "pywebview>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "httpx>=0.27",
]

[project.scripts]
sisi-tv = "ngc_cams_web.__main__:main"

[project.gui-scripts]
# gui-scripts produces a no-console Windows .exe so the viewer doesn't flash a
# console window at login when launched from the Startup folder shortcut.
sisi-tv-viewer = "ngc_cams_viewer.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

